<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello"><![CDATA[The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>The Awesome<br/>]]></string>
    <string name="follow"><![CDATA[Follow us<br/>on <a href="http://twitter.com/umanoapp">Twitter</a>]]></string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">LWT</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="clear_base">CLEAR BASE</string>
    <string name="restart">RESTART</string>
    <string name="dicts_not_found">Dict not found</string>
    <string name="error_catched">Error on translating</string>
    <string name="action_webmode">Web mode</string>
    <string name="word_status_unknow">U</string>
    <string name="word_status_known">K</string>
    <string name="word_status_learn">L</string>
    <string name="translation_label">Translation</string>
    <string name="sentence_label">Sentence</string>
    <string name="tags_label">Tags</string>

</resources>
